--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -241,6 +241,16 @@
     <servlet-name>UpdateLightStateServlet</servlet-name>
     <servlet-class>cn.it.web.controller.UpdateLightStateServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>StartServer</servlet-name>
+    <servlet-class>cn.it.web.controller.StartServer</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+
+
+
+
 
   <servlet-mapping>
     <servlet-name>Building_1UIServlet</servlet-name>
@@ -481,6 +491,10 @@
   <servlet-mapping>
     <servlet-name>UpdateLightStateServlet</servlet-name>
     <url-pattern>/servlet/UpdateLightStateServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>StartServer</servlet-name>
+    <url-pattern>/servlet/StartServer</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
